--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,5 +1,5 @@
 {
-  "start": "**Hallo {} \uD83D\uDC4B Welkom!**\nDeze robot maakt het mogelijk om files te ontvangen van kanalen die content transfers beperken \uD83D\uDD10 \n Je kunt nu een link sturen (publieke kanaal) en de file in enkele seconden ontvangen \uD83D\uDCA5 \n Om een file te ontvangen van een privé kanaal, moet je jouw account koppelen (-Zie veelgestelde vragen) \uD83D\uDC8C \n \n \uD83D\uDCA0 ** Dagelijks gebruik: ** {} van {}.\n\n **Om door te gaan, klik dan op de knoppen onder het bericht \uD83D\uDC47** ",
+  "start": "**Hallo {} \uD83D\uDC4B Welkom!**\nDeze robot maakt het mogelijk om files te ontvangen van kanalen die content transfers beperken \uD83D\uDD10 \n Je kunt nu een link sturen (publiek kanaal) en de file in enkele seconden ontvangen \uD83D\uDCA5 \n Om een file te ontvangen van een privé kanaal, moet je jouw account koppelen (-Zie veelgestelde vragen) \uD83D\uDC8C \n \n \uD83D\uDCA0 ** Dagelijks gebruik: ** {} van {}.\n\n **Om door te gaan, klik dan op de knoppen onder het bericht \uD83D\uDC47** ",
   "limit": "\uD83D\uDEAB **dagelijkse limiet:**\uD83D\uDEAB \n\n\uD83D\uDD3B De file die je probeert te verkrijgen is {} en je hebt vandaag al {} gebruikt. \n De dagelijkse limiet is tot 5 GB van privé kanalen en onbeperkt in publieke kanalen \n \n__ De dagelijkse limiet wordt elke dag gereset om 00:00 .__ ⌚️ \n ",
   "connect": "Om door te gaan stuur dan je telefoonnummer inclusief het landnummer. \n ** Bijvoorbeeld: **` +97250123456` \n\n Tap / cancel om af te breken. ",
   "code_sent": "Ik heb een verificatie-code gestuurd naar het nummer {}. \nVoer de code in in '-' formaat tussen elk cijfer. \nBijvoorbeeld als de ontvangen code 12345 is, stuur dan 1-2-3-4-5. \n\n Druk / cancel om het proces af te breken. ",
@@ -12,7 +12,7 @@
   "answer5": "**Vraag: Hoe kan ik meerdere berichten tegelijkertijd van een publiek kanaal ontvangen? ** \n \n \n De links naar de berichten moeten regel voor regel verzonden worden: \n Bijvoorbeeld: \n \n Link 1\n Link 2 \n Link 3 \nenzovoort. \n ",
   "answer6": "**Vraag: Waarom moet ik de code die ik van Telegram ontvangen heb invoeren in '-' formaat tussen elk cijfer? ** \n\n ** Antwoord: ** Ten gevolge van een extra Telegram beveiligingsmaatregel dat wanneer de code eenmaal is geverifieerd aan iemand anders, het op dat moment gecanceld wordt. \nDaarom, om ervoor te zorgen dat de code niet wordt gecanceld, moet het worden verzonden in het gespecificeerde formaat '-' tussen elk cijfer. \n ",
   "canceled": "⛔ Het proces is succesvol afgebroken.",
-  "phone_error": "☎ ** Het nummr {} is incorrect of geblokkeerd door Telegram **",
+  "phone_error": "☎ ** Het nummer {} is incorrect of geblokkeerd door Telegram **",
   "timeout": "**⏰ Time Out:** Vijf minuten zijn voorbij sinds het code verzoek... Log a.u.b. opnieuw in!",
   "invalid_code": "\uD83D\uDCF5 ** Verkeerde code! **",
   "expired_code": "⌚ ** Verlopen code! **",
@@ -26,7 +26,7 @@
   "not_sub": "De gebruiker zit mogelijk niet op dit kanaal.. Stuur de volgende regel naar de support groep! \n\n` {}` ",
   "downloaded": "De file was successvol gedownload. Nu aan het uploaden...",
   "unsupported_format": "Dit file formaat wordt momenteel niet ondersteund!",
-  "invalid_public_link": "Link: {} is Incorrect!",
+  "invalid_public_link": "Link: {} is incorrect!",
   "channel_private": "De link {} is van een privé kanaal... ik heb daar geen toegang toe!",
   "floodwait": "Vanwege een Telegram beperking, graag opnieuw proberen in {} seconden.",
   "group_link": "De link {} lijkt van de groep te zijn, ik heb daar geen toegang toe.",
@@ -35,8 +35,8 @@
   "joined": "Je verzoek om lid te worden is goedgekeurd!",
   "ask_logout": "Weet je zeker dat je wilt uiloggen? \nAls je account is uitgelogd, kan je geen content meer ontvangen van privé kanalen ...",
   "disconnecting": "Account wordt ontkoppeld van de bot...",
-  "disconnected": "Je account is successvol uitgelogd!",
-  "need_connection":" Om content te ontvangen van een privé kanaal moet je eerst je account koppelen met de bot! ",
+  "disconnected": "Je account is successvol ontkoppeld!",
+  "need_connection":" Om content te ontvangen van een privé kanaal moet je eerst je account koppelen aan de bot! ",
   "ask_private": "Zend nu de link die je graag wilt ontvangen van het privé kanaal; NB je gebruiker die gekoppeld is aan de bot moet lid zijn van dit kanaal.",
   "ask_public": "Zend nu de link van het kanaal waar je graag content van wilt ontvangen; je kan meerdere links sturen, regel voor regel, en ze allemaal ontvangen.",
   "banned": "\uD83D\uDEAB ** Je bent geblokkeerd voor het gebruik van deze bot ** \uD83E\uDD75",
